# FALCON

./: .gitignore  BirdNET_IBC53_Implementation_Guide_v2.docx  BirdNET_IBC53_PRD.docx  Literature_Review_IEEE.docx  Proposed_Methodology_IEEE.docx  README.md  collect_bird_audio.py  documentation.md  generate_methodology.py  paper_ieee.tex
birdnet-ibc53-project/: README.md  compute_accuracy.py  pyproject.toml  requirements.txt  run_pipeline.py
birdnet-ibc53-project/configs/: config.py
birdnet-ibc53-project/scripts/: 00_clean_ibc53.py  01_segment_audio.py  02_classify_segments.py  03_extract_esc50_noise.py  04_build_dataset.py  05_train_and_evaluate.py  06_analyze_results.py  07_tune_thresholds.py  08_visualize_all.py  09_live_recognition.py  __init__.py  _classify_lib.py  s02_classify_segments_lib.py
output/xeno_canto/: metadata.json
